# tindicators

./: .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Pipfile  README.md  azure-pipelines.yml  benchmark.c  benchmark2.c  codegen.py  doc.tcl  docsgen.py  fuzzer.c  fuzzer.cc  generate-bindings.py  index.markdown  indicators.tcl  indicators.yaml  pytulip.py  sample.c  setup.py  smoke.c  test.cs  test.py  test_ti.py  tulipindicators-net.csproj  tulipindicators.py  version.py
.buildkite/: pipeline.yaml
.packaging/: Dockerfile
bindings/lean/: README.md  generate-bindings.py  packages.config  test.cs  tindicators-lean.csproj  tulipindicators-lean.csproj
bindings/python/: .gitignore  README.md  pip.conf  setup.py  tox.ini
bindings/python/tindicators/: __init__.py  impl.py  test_.py
bindings/python/tulipindicators/: __init__.py  test_.py
indicators/: abands.c  abands.cc  abs.cc  acos.cc  ad.cc  add.cc  adosc.cc  adx.c  adx.cc  adxr.c  adxr.cc  ahma.cc  ao.cc  apo.cc  aroon.cc  aroonosc.cc  arsi.cc  asin.cc  atan.cc  atr.c  atr.cc  avgprice.cc  bbands.cc  bf2.cc  bf3.cc  bop.cc  cci.c  cci.cc  ce.c  ce.cc  ceil.cc  cmf.cc  cmi.cc  cmo.cc  copp.c  copp.cc  cos.cc  cosh.cc  crossany.cc  crossover.cc  (+174 more)
lean/: generate-bindings.py  packages.config  test.cs
tests/: benchmark2.c  extra.txt  fuzzer.cc  smoke.c
tulipindicators/: __init__.py
utils/: buffer.c  buffer.h  localbuffer.h  log.h  minmax.h  ringbuf.hh  testing.c  testing.cc  testing.h
